@@ -31,8 +31,8 @@ import org.apache.hadoop.ipc.VersionedProtocol;
  * @author Michael Cafarella
  **********************************************************************/
 interface DatanodeProtocol extends VersionedProtocol {
-  public static final long versionID = 3L;  // BlockCommand.action replaced boolean members
-                                            // affected: BlockCommand
+  public static final long versionID = 4L; // BlockCommand.action:
+                                           // replace DNA_REPORT by DNA_REGISTER
   
   // error code
   final static int DISK_ERROR = 1;
@@ -46,7 +46,7 @@ interface DatanodeProtocol extends VersionedProtocol {
                               DNA_TRANSFER,   // transfer blocks to another datanode
                               DNA_INVALIDATE, // invalidate blocks
                               DNA_SHUTDOWN,   // shutdown node
-                              DNA_REPORT; }   // send block report to the namenode
+                              DNA_REGISTER; }   // re-register
 
   /** 
    * Register Datanode.
